# lizard

./: .env.sample  .gitignore  CHANGELOG.md  GETTING_STARTED.md  MAINTAINERS.md  Makefile  README.md  lizard-cloud.yaml.example  pyproject.toml  tox.ini
.github/: CODEOWNERS  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml 
analytics/: advanced_anomaly.py  clustering.py  rules_engine.py  simple_anomaly.py
app/: cloud_api.py  ingest_engine.py  main.py  mapping_api.py  mapping_engine.py  rules_api.py  viz_engine.py  workbench_api.py
cloud/: __init__.py  analytics_engine.py  audit.py  auth.py  cluster_manager.py  config.py  connectivity.py  constants.py  diagnostics.py  output_storage.py  scheduler.py
cloud/execution/: __init__.py  base.py  engine_factory.py  local_engine.py  spark_engine.py
connectors/: __init__.py  base.py  local_provider.py  provider_factory.py
connectors/azure/: __init__.py  dbfs.py  storage.py
connectors/csv/: loader.py
connectors/rest_stub/: client.py
docs/: openapi.yaml
domain/: models.py  rules_models.py  schemas.py
infra/: Dockerfile.api  Dockerfile.ui  docker-compose.yml  nginx.conf
mapping/: ai_mapper.py  expr.py  targets.py  validation.py
scripts/: generate_demo_data.py  generate_fraud_scenario.py  generate_raw_travel_multileg.py  generate_synthetic.py  seed_db.py
tests/: conftest.py  test_analytics_engine.py  test_api.py  test_api_ingest.py  test_audit.py  test_cloud_auth.py  test_cloud_config.py  test_cluster_manager.py  test_connectors.py  test_execution.py  test_mapping.py  test_output_storage.py  test_scheduler.py
ui-react/: index.html  package-lock.json  package.json  vite.config.mts
ui-react/src/: App.tsx  api.ts  main.tsx  theme.ts
ui-react/src/components/: AddVisualizationDialog.tsx  AdvancedFilterBuilder.tsx  AnomalyDetailDrawer.tsx  AppLayout.tsx  CloudModeToggle.tsx  CloudSourcePicker.tsx  DashboardLayoutEngine.tsx  DataGridView.tsx  DataManager.tsx  ExpressionBuilder.tsx  GlobalFiltersBar.tsx  GlobeDeck.tsx  HeaderBrand.tsx  (+9 more)
(+26 files in other folders)
